# Cyber-Bluegrass

RedTeamScripts/: install_mythic.sh
RedTeamScripts/Ransomware/: build.bat
RedTeamScripts/Ransomware/WindowsBinary/: Cargo.toml
RedTeamScripts/Ransomware/WindowsBinary/src/: main.rs
RedTeamScripts/RansomwareEmulation/: DEBUG_GUIDE.md  PASSWORD_METHODS.md  encrypt_files.bat  encrypt_files.ps1
RedTeamTools/: webshell.php
